--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta http-equiv="refresh" content="0; url=https://github.com/SashiniLiyanage/JS-2d-games/Project7/index.html">
+    <meta http-equiv="refresh" content="0; url=https://JS-2d-games.github.io/Project7/index.html">
 </head>
 <body>
     
