--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta http-equiv="refresh" content="0; url=https://JS-2d-games.github.io/Project7/index.html">
-</head>
-<body>
-    
-</body>
+<!DOCTYPE HTML>
+<html lang="en-US">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="refresh" content="1;url=Project7/index.html">
+        <title>Page Redirection</title>
+    </head>
+    <body>
+        If you are not redirected automatically, 
+        follow the <a href="Project7/index.html">link to the 2D Game</a>
+    </body>
 </html>
